fetch entry
