# server/admin/openapi/oas_response_encoders_gen.go
@@ -13,6 +13,20 @@ import (
 	ht "github.com/ogen-go/ogen/http"
 )
 
+func encodeGetEntryByDynamicPathResponse(response *GetLatestEntriesRow, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetLatestEntriesResponse(response []GetLatestEntriesRow, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
